# cc_calc

./: .gitignore  README.md  pyproject.toml
schemas/: chase.json  copilot.json
src/cc_calc/: main.py
